--- a/1. tetris/index.html
+++ b/1. tetris/index.html
@@ -15,10 +15,11 @@
     table {
       border-collapse: collapse;
       border-spacing: 0;
+      margin: 20px;
     }
 
     td {
-      border: 1px solid #000;
+      border: 1px solid rgb(19, 232, 27);
       width: 25px;
       height: 25px;
     }
@@ -26,8 +27,14 @@
     body {
       height: 100vh;
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
+    }
+
+    h2 {
+      width: 100%;
+      padding-left: 20%;
     }
 
     /* 设置方块颜色 */
@@ -62,6 +69,8 @@
 </head>
 
 <body>
+  <h2 id="score">分数：0</h2>
+  <h2 id="f">帧编号：0</h2>
   <script src="./js/jquery.js"></script>
   <script src="./js/Game.js"></script>
   <script src="./js/type.js"></script>
